fixed handler list
Signed-off-by: Philipp Etschel <philipp.etschel@ch.bosch.com>